# Pindow

./: .gitignore  Cargo.toml  FIELDS.md  KEYMAP.md  KEYS.md  README.md  config-example.json  config.json
src/: help.rs  main.rs
src/arguments/: config.rs  debug.rs  info.rs  mod.rs
src/config/: key.rs  load.rs  mod.rs  options.rs  write.rs
src/error/: config.rs  mod.rs  run.rs
src/info/: help.rs  mod.rs
src/keybindings/: handler.rs
src/run/: application.rs  config.rs  debug.rs  mod.rs  utils.rs
src/window/: handler.rs  mod.rs  update.rs
src/window/utils/: mod.rs  win.rs
