[package]
name = "pin_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "1.1.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
]
