[package]
name = "Pindow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "1.1.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
which = "4.3.0"
notify-rust = "4.5.10"
directories = "4.0.1"

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse"
]

# [target.'cfg(windows)'.dependencies]
# winapi = { version = "0.3", features = ["winuser"] }
